--- a/app/settings/index.html
+++ b/app/settings/index.html
@@ -18,25 +18,33 @@
 				<div class="flex flex-col">
 					<div class="mb-1 mt-5 mr-4 ml-4">
 						<button id="setting " class="buttonm settings" onclick="menu(event, 'setting')">
-							<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-								<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10.325 4.317c.426-1.756 2.924-1.756 3.35 0a1.724 1.724 0 002.573 1.066c1.543-.94 3.31.826 2.37 2.37a1.724 1.724 0 001.065 2.572c1.756.426 1.756 2.924 0 3.35a1.724 1.724 0 00-1.066 2.573c.94 1.543-.826 3.31-2.37 2.37a1.724 1.724 0 00-2.572 1.065c-.426 1.756-2.924 1.756-3.35 0a1.724 1.724 0 00-2.573-1.066c-1.543.94-3.31-.826-2.37-2.37a1.724 1.724 0 00-1.065-2.572c-1.756-.426-1.756-2.924 0-3.35a1.724 1.724 0 001.066-2.573c-.94-1.543.826-3.31 2.37-2.37.996.608 2.296.07 2.572-1.065z" />
-								<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" />
+							<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+								<path stroke-linecap="round" stroke-linejoin="round" d="M10.325 4.317c.426-1.756 2.924-1.756 3.35 0a1.724 1.724 0 002.573 1.066c1.543-.94 3.31.826 2.37 2.37a1.724 1.724 0 001.065 2.572c1.756.426 1.756 2.924 0 3.35a1.724 1.724 0 00-1.066 2.573c.94 1.543-.826 3.31-2.37 2.37a1.724 1.724 0 00-2.572 1.065c-.426 1.756-2.924 1.756-3.35 0a1.724 1.724 0 00-2.573-1.066c-1.543.94-3.31-.826-2.37-2.37a1.724 1.724 0 00-1.065-2.572c-1.756-.426-1.756-2.924 0-3.35a1.724 1.724 0 001.066-2.573c-.94-1.543.826-3.31 2.37-2.37.996.608 2.296.07 2.572-1.065z" />
+								<path stroke-linecap="round" stroke-linejoin="round" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" />
 							</svg>
 							<span data-loc>General</span>
 						</button>
 					</div>
 					<div class="mb-1 mt-1 mr-4 ml-4">
 						<button id="codes " class="buttonm codes" onclick="menu(event, 'codes')">
-							<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-								<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 7a2 2 0 012 2m4 0a6 6 0 01-7.743 5.743L11 17H9v2H7v2H4a1 1 0 01-1-1v-2.586a1 1 0 01.293-.707l5.964-5.964A6 6 0 1121 9z" />
+							<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+								<path stroke-linecap="round" stroke-linejoin="round" d="M15 7a2 2 0 012 2m4 0a6 6 0 01-7.743 5.743L11 17H9v2H7v2H4a1 1 0 01-1-1v-2.586a1 1 0 01.293-.707l5.964-5.964A6 6 0 1121 9z" />
 							</svg>
 							<span data-loc>Codes</span>
 						</button>
 					</div>
 					<div class="mb-1 mt-1 mr-4 ml-4">
 						<button id="shortcuts " class="buttonm shortcuts" onclick="menu(event, 'shortcuts')">
-							<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-								<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5H7a2 2 0 00-2 2v12a2 2 0 002 2h10a2 2 0 002-2V7a2 2 0 00-2-2h-2M9 5a2 2 0 002 2h2a2 2 0 002-2M9 5a2 2 0 012-2h2a2 2 0 012 2m-3 7h3m-3 4h3m-6-4h.01M9 16h.01" />
+							<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+								<path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+								<rect x="2" y="6" width="20" height="12" rx="2"></rect>
+								<line x1="6" y1="10" x2="6" y2="10"></line>
+								<line x1="10" y1="10" x2="10" y2="10"></line>
+								<line x1="14" y1="10" x2="14" y2="10"></line>
+								<line x1="18" y1="10" x2="18" y2="10"></line>
+								<line x1="6" y1="14" x2="6" y2="14.01"></line>
+								<line x1="18" y1="14" x2="18" y2="14.01"></line>
+								<line x1="10" y1="14" x2="14" y2="14"></line>
 							</svg>
 							<span data-loc>Shortcuts</span>
 						</button>
@@ -53,8 +61,11 @@
 				<div class="flex-flex-col">
 					<div class="mb-1 mt-1 mr-4 ml-4">
 						<button class="buttonm" onclick="provideFeedback()">
-							<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-								<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8h2a2 2 0 012 2v6a2 2 0 01-2 2h-2v4l-4-4H9a1.994 1.994 0 01-1.414-.586m0 0L11 14h4a2 2 0 002-2V6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2v4l.586-.586z" />
+							<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+								<path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+								<path d="M4 21v-13a3 3 0 0 1 3 -3h10a3 3 0 0 1 3 3v6a3 3 0 0 1 -3 3h-9l-4 4"></path>
+								<line x1="8" y1="9" x2="16" y2="9"></line>
+								<line x1="8" y1="13" x2="14" y2="13"></line>
 							</svg>
 							<span data-loc>Feedback</span>
 						</button>
@@ -170,8 +181,11 @@
 									</button>
 
 									<button type="button" onclick="provideFeedback()" class="relative -top-2.5 cursor-pointer rounded-full border-2 border-white bg-white py-1 px-3 text-center text-base font-bold text-black transition duration-200 ease-in hover:bg-transparent hover:text-white">
-										<svg xmlns="http://www.w3.org/2000/svg" class="relative top-1" height="20" width="20" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-											<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8h2a2 2 0 012 2v6a2 2 0 01-2 2h-2v4l-4-4H9a1.994 1.994 0 01-1.414-.586m0 0L11 14h4a2 2 0 002-2V6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2v4l.586-.586z" />
+										<svg xmlns="http://www.w3.org/2000/svg" class="relative top-1" height="20" width="20" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+											<path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+											<path d="M4 21v-13a3 3 0 0 1 3 -3h10a3 3 0 0 1 3 3v6a3 3 0 0 1 -3 3h-9l-4 4"></path>
+											<line x1="8" y1="9" x2="16" y2="9"></line>
+											<line x1="8" y1="13" x2="14" y2="13"></line>
 										</svg>
 										<span data-loc>Provide feedback</span>
 									</button>
@@ -290,8 +304,12 @@
 							<h4 data-loc>Choose which display should Authme open by default. Authme will fall back to the primary display if the chosen one is not available.</h4>
 							<div class="relative inline-block">
 								<button id="displayButton" class="buttoni" onclick="display()">
-									<svg xmlns="http://www.w3.org/2000/svg" class="pointer-events-none relative top-1 h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-										<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9.75 17L9 20l-1 1h8l-1-1-.75-3M3 13h18M5 17h14a2 2 0 002-2V5a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" />
+									<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+										<path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+										<rect x="3" y="4" width="18" height="12" rx="1"></rect>
+										<line x1="7" y1="20" x2="17" y2="20"></line>
+										<line x1="9" y1="16" x2="9" y2="20"></line>
+										<line x1="15" y1="16" x2="15" y2="20"></line>
 									</svg>
 									Display #1
 								</button>
@@ -337,8 +355,8 @@
 							<h4 data-loc>You can view the logs for debugging. You can view all the logs in the settings folder.</h4>
 							<div class="flex flex-row flex-wrap justify-center gap-3">
 								<button class="buttoni" onclick="latestLog()">
-									<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-										<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5H7a2 2 0 00-2 2v12a2 2 0 002 2h10a2 2 0 002-2V7a2 2 0 00-2-2h-2M9 5a2 2 0 002 2h2a2 2 0 002-2M9 5a2 2 0 012-2h2a2 2 0 012 2m-3 7h3m-3 4h3m-6-4h.01M9 16h.01" />
+									<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+										<path stroke-linecap="round" stroke-linejoin="round" d="M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z" />
 									</svg>
 									<span data-loc>Latest log</span>
 								</button>
@@ -361,7 +379,7 @@
 									<svg xmlns="http://www.w3.org/2000/svg" class="pointer-events-none relative top-1 h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 										<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 9l4-4 4 4m0 6l-4 4-4-4" />
 									</svg>
-									<span class="sortDefault">Default</span>
+									<span class="sortDefault pointer-events-none">Default</span>
 								</button>
 
 								<div id="sortContent" class="animation absolute right-0 z-20 mt-2 hidden w-72 overflow-hidden rounded-2xl border-2 border-white bg-white">
@@ -473,7 +491,7 @@
 							<br />
 							<hr />
 
-							<div class="relative inline-block">
+							<div>
 								<h3>Import screen capture</h3>
 								<h4>You can turn on Import screen capture. You can scan QR codes from your screen.</h4>
 							</div>
@@ -487,11 +505,28 @@
 								<span id="tgt8" class="text-xl text-black">-</span>
 							</div>
 							<hr />
-							<div class="relative inline-block">
+							<div>
 								<h3>Backup</h3>
 								<h4>You can create backup codes and backup files.</h4>
-								<button class="buttoni" onclick="backupCode()">Backup code</button>
-								<button class="buttoni" onclick="backupFile()">Backup file</button>
+								<div class="flex flex-row flex-wrap justify-center gap-3">
+									<button class="buttoni" onclick="backupFile()">
+										<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+											<path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+											<path d="M14 3v4a1 1 0 0 0 1 1h4"></path>
+											<path d="M11.5 21h-4.5a2 2 0 0 1 -2 -2v-14a2 2 0 0 1 2 -2h7l5 5v5m-5 6h7m-3 -3l3 3l-3 3"></path>
+										</svg>
+										Create backup file
+									</button>
+
+									<button class="buttoni" onclick="backupFile()">
+										<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+											<path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+											<path d="M14 3v4a1 1 0 0 0 1 1h4"></path>
+											<path d="M5 13v-8a2 2 0 0 1 2 -2h7l5 5v11a2 2 0 0 1 -2 2h-5.5m-9.5 -2h7m-3 -3l3 3l-3 3"></path>
+										</svg>
+										Load backup file
+									</button>
+								</div>
 							</div>
 						</div>
 					</div>
