--- a/app/application/index.html
+++ b/app/application/index.html
@@ -110,8 +110,11 @@
 						</button>
 
 						<button type="button" onclick="provideFeedback()" class="relative -top-2.5 cursor-pointer rounded-full border-2 border-white bg-white py-1 px-3 text-center text-base font-bold text-black transition duration-200 ease-in hover:bg-transparent hover:text-white">
-							<svg xmlns="http://www.w3.org/2000/svg" class="relative top-1" height="20" width="20" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-								<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8h2a2 2 0 012 2v6a2 2 0 01-2 2h-2v4l-4-4H9a1.994 1.994 0 01-1.414-.586m0 0L11 14h4a2 2 0 002-2V6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2v4l.586-.586z" />
+							<svg xmlns="http://www.w3.org/2000/svg" class="relative top-1" height="20" width="20" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+								<path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+								<path d="M4 21v-13a3 3 0 0 1 3 -3h10a3 3 0 0 1 3 3v6a3 3 0 0 1 -3 3h-9l-4 4"></path>
+								<line x1="8" y1="9" x2="16" y2="9"></line>
+								<line x1="8" y1="13" x2="14" y2="13"></line>
 							</svg>
 							<span data-loc>Provide feedback</span>
 						</button>
@@ -157,8 +160,12 @@
 						<span data-loc>Help</span>
 					</button>
 					<button class="buttoni" onclick="sampleImport()">
-						<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-							<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z" />
+						<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+							<path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+							<path d="M14 3v4a1 1 0 0 0 1 1h4"></path>
+							<path d="M17 21h-10a2 2 0 0 1 -2 -2v-14a2 2 0 0 1 2 -2h7l5 5v11a2 2 0 0 1 -2 2z"></path>
+							<path d="M11 14h1v4h1"></path>
+							<path d="M12 11h.01"></path>
 						</svg>
 						<span data-loc>Sample import file</span>
 					</button>
@@ -218,12 +225,12 @@
 		</div>
 		<!-- info bar -->
 		<div class="infoBar sticky bottom-5 z-10 mx-auto hidden w-max">
-			<div class="bg-popup-magenta flex items-center justify-center rounded-2xl p-2 text-white shadow">
-				<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+			<div class="bg-popup-magenta flex items-center justify-center rounded-2xl p-2 py-3 text-white shadow">
+				<svg xmlns="http://www.w3.org/2000/svg" class="mx-3 h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 					<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
 				</svg>
-				<h5 class="m-0 mx-5 text-center"><span class="bar">Thanks for using Authme!</span> <a class="barLink text-lg font-bold text-white duration-200 ease-in hover:text-black" href="#" onclick="barLink()">Feedback</a></h5>
-				<a onclick="this.parentElement.style.display='none'" class="relative top-0.5 cursor-pointer rounded-md py-1 transition-colors duration-200 hover:text-gray-800">
+				<h5 class="m-0 text-center"><span class="bar">Thanks for using Authme!</span> <a class="barLink text-lg font-bold text-white duration-200 ease-in hover:text-black" href="#" onclick="barLink()">Feedback</a></h5>
+				<a onclick="this.parentElement.style.display='none'" class="relative top-0.5 mx-3 cursor-pointer rounded-md transition-colors duration-200 hover:text-gray-800">
 					<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 						<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
 					</svg>
