--- a/app/import/index.html
+++ b/app/import/index.html
@@ -72,8 +72,12 @@
 				<div class="flex flex-col flex-wrap items-center justify-center gap-3">
 					<div class="chooseImages m-1">
 						<button class="buttoni" onclick="chooseImages()">
-							<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-								<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 16l4.586-4.586a2 2 0 012.828 0L16 16m-2-2l1.586-1.586a2 2 0 012.828 0L20 14m-6-6h.01M6 20h12a2 2 0 002-2V6a2 2 0 00-2-2H6a2 2 0 00-2 2v12a2 2 0 002 2z" />
+							<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+								<path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+								<line x1="15" y1="8" x2="15.01" y2="8"></line>
+								<rect x="4" y="4" width="16" height="16" rx="3"></rect>
+								<path d="M4 15l4 -4a3 5 0 0 1 3 0l5 5"></path>
+								<path d="M14 14l1 -1a3 5 0 0 1 3 0l2 2"></path>
 							</svg>
 							<span data-loc>Choose images</span>
 						</button>
@@ -81,9 +85,11 @@
 					</div>
 					<div class="useWebcam m-1">
 						<button class="buttoni" onclick="useWebcam()">
-							<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-								<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 9a2 2 0 012-2h.93a2 2 0 001.664-.89l.812-1.22A2 2 0 0110.07 4h3.86a2 2 0 011.664.89l.812 1.22A2 2 0 0018.07 7H19a2 2 0 012 2v9a2 2 0 01-2 2H5a2 2 0 01-2-2V9z" />
-								<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 13a3 3 0 11-6 0 3 3 0 016 0z" />
+							<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+								<path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+								<circle cx="12" cy="10" r="7"></circle>
+								<circle cx="12" cy="10" r="3"></circle>
+								<path d="M8 16l-2.091 3.486a1 1 0 0 0 .857 1.514h10.468a1 1 0 0 0 .857 -1.514l-2.091 -3.486"></path>
 							</svg>
 							<span data-loc>Use webcam</span>
 						</button>
@@ -91,8 +97,12 @@
 					</div>
 					<div class="screenCapture m-1 hidden">
 						<button class="buttoni w-[576px] sm:w-72" onclick="captureFromScreen()">
-							<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-								<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9.75 17L9 20l-1 1h8l-1-1-.75-3M3 13h18M5 17h14a2 2 0 002-2V5a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" />
+							<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+								<path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+								<rect x="3" y="4" width="18" height="12" rx="1"></rect>
+								<line x1="7" y1="20" x2="17" y2="20"></line>
+								<line x1="9" y1="16" x2="9" y2="20"></line>
+								<line x1="15" y1="16" x2="15" y2="20"></line>
 							</svg>
 							<span data-loc>Capture screen</span>
 						</button>
