--- a/app/export/index.html
+++ b/app/export/index.html
@@ -38,7 +38,7 @@
 			<!-- before export -->
 			<div class="before_export mx-auto mt-20 mb-20 w-2/3 rounded-2xl bg-gray-800 pb-1">
 				<h3 data-loc class="pt-5">Export codes</h3>
-				<h4 data-loc>If you saved your codes you can export the secrets and the saved QR codes.</h4>
+				<h4 data-loc>Your saved codes can be exported here. Ideal if you want to use your codes elsewhere or for a security backup.</h4>
 				<button class="buttoni but1 mb-5" id="but0" onclick="exportCodes()">
 					<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
 						<path stroke-linecap="round" stroke-linejoin="round" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
@@ -50,7 +50,7 @@
 			<div class="after_export hidden">
 				<div class="mx-auto mt-20 mb-20 w-2/3 rounded-2xl bg-gray-800">
 					<h3 data-loc class="pt-5">Save exported codes</h3>
-					<h4 data-loc>Save your exported 2FA codes to use it elsewhere.</h4>
+					<h4 data-loc>You can save your exported 2FA codes, so you can use them elsewhere, and keeping a backup of your codes is always a good idea.</h4>
 					<div class="flex flex-row flex-wrap justify-center gap-3">
 						<div>
 							<button class="buttoni" id="but1" onclick="saveFile()">
