--- a/app/edit/index.html
+++ b/app/edit/index.html
@@ -53,7 +53,7 @@
 			<!-- load codes -->
 			<div class="beforeLoad mx-auto mb-20 mt-20 w-2/3 rounded-2xl bg-gray-800">
 				<h3 data-loc id="rollbackBut" class="pt-5">Load saved codes</h3>
-				<h4 data-loc>You can load the 2FA codes you saved. After that you can edit or delete them and you can add more codes.</h4>
+				<h4 data-loc>Load your saved 2FA codes. You can edit or delete your codes, or you can even add new codes here.</h4>
 				<button class="buttoni mb-5" onclick="loadCodes()">
 					<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
 						<path stroke-linecap="round" stroke-linejoin="round" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
@@ -68,15 +68,21 @@
 					<h4 data-loc>Now you can modify existing codes or add more codes.</h4>
 					<div class="flex flex-row flex-wrap justify-center gap-3 pb-5">
 						<button class="buttoni" onclick="createSave()">
-							<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-								<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 10v6m0 0l-3-3m3 3l3-3m2 8H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z" />
+							<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+								<path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+								<path d="M6 4h10l4 4v10a2 2 0 0 1 -2 2h-12a2 2 0 0 1 -2 -2v-12a2 2 0 0 1 2 -2"></path>
+								<circle cx="12" cy="14" r="2"></circle>
+								<polyline points="14 4 14 8 8 8 8 4"></polyline>
 							</svg>
 							<span data-loc>Save modifications</span>
 						</button>
 
 						<button class="buttoni" onclick="addCodes()">
-							<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-								<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 13h6m-3-3v6m5 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z" />
+							<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+								<path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+								<circle cx="12" cy="12" r="9"></circle>
+								<line x1="9" y1="12" x2="15" y2="12"></line>
+								<line x1="12" y1="9" x2="12" y2="15"></line>
 							</svg>
 							<span data-loc>Add codes</span>
 						</button>
