--- a/app/settings/index.html
+++ b/app/settings/index.html
@@ -504,7 +504,7 @@
 								></a>
 								<span id="tgt8" class="text-xl text-black">-</span>
 							</div>
-							<hr />
+							<!-- <hr />
 							<div>
 								<h3>Backup</h3>
 								<h4>You can create backup codes and backup files.</h4>
@@ -527,7 +527,7 @@
 										Load backup file
 									</button>
 								</div>
-							</div>
+							</div> -->
 						</div>
 					</div>
 				</div>
