--- a/app/export/index.html
+++ b/app/export/index.html
@@ -7,22 +7,22 @@
 		<!-- js -->
 		<script defer src="./src/js/index.js"></script>
 		<!-- css -->
-		<link rel="stylesheet" href="../.././src/global.css" />
-		<link rel="stylesheet" href="../.././src/tailwind.css" />
+		<link rel="stylesheet" href="../.././styles/global.css" />
+		<link rel="stylesheet" href="../../styles/tailwind.css" />
 	</head>
 	<body>
 		<!-- build number -->
-		<div class="w-full text-white bg-black font-bold build hidden z-10 top-0 sticky">
-			<div class="container flex flex-row items-center justify-center py-2 mx-auto">
+		<div class="build sticky top-0 z-10 hidden w-full bg-black font-bold text-white">
+			<div class="container mx-auto flex flex-row items-center justify-center py-2">
 				<div class="flex">
-					<h5 class="mx-3 flex flex-row m-0 font-bold build-content text-center">You are running a pre release version of Authme!</h5>
+					<h5 class="build-content m-0 mx-3 flex flex-row text-center font-bold">You are running a pre release version of Authme!</h5>
 				</div>
 			</div>
 		</div>
 
 		<!-- header -->
-		<div class="mx-auto rounded-2xl bg-gray-700 w-3/5 mt-40 text-center">
-			<img src="../../img/header.png" class="h-16 w-16 relative top-5" />
+		<div class="mx-auto mt-40 w-3/5 rounded-2xl bg-gray-700 text-center">
+			<img src="../../img/header.png" class="relative top-5 h-16 w-16" />
 			<h2>Export</h2>
 			<h4 data-loc>You can export the 2FA codes you saved.</h4>
 			<button class="buttoni mb-6" onclick="hide()">
@@ -34,28 +34,30 @@
 		</div>
 
 		<!-- content -->
-		<div class="bg-gray-700 w-3/5 m-auto mt-20 mb-60 rounded-2xl relative text-center p-1">
+		<div class="relative m-auto mt-20 mb-60 w-3/5 rounded-2xl bg-gray-700 p-1 text-center">
 			<!-- before export -->
-			<div class="before_export mx-auto rounded-2xl bg-gray-800 w-2/3 mt-20 mb-20">
+			<div class="before_export mx-auto mt-20 mb-20 w-2/3 rounded-2xl bg-gray-800 pb-1">
 				<h3 data-loc class="pt-5">Export codes</h3>
-				<h4 data-loc>If you saved your codes you can export the secrets and the saved QR codes.</h4>
+				<h4 data-loc>Your saved codes can be exported here. Ideal if you want to use your codes elsewhere or for a security backup.</h4>
 				<button class="buttoni but1 mb-5" id="but0" onclick="exportCodes()">
-					<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-						<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M7 16V4m0 0L3 8m4-4l4 4m6 0v12m0 0l4-4m-4 4l-4-4" />
+					<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+						<path stroke-linecap="round" stroke-linejoin="round" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
 					</svg>
-					Export
+					<span data-loc>Confirm</span>
 				</button>
 			</div>
 			<!-- after export -->
 			<div class="after_export hidden">
-				<div class="mx-auto rounded-2xl bg-gray-800 w-2/3 mt-20 mb-20">
+				<div class="mx-auto mt-20 mb-20 w-2/3 rounded-2xl bg-gray-800">
 					<h3 data-loc class="pt-5">Save exported codes</h3>
-					<h4 data-loc>Save your exported 2FA codes to use it elsewhere.</h4>
-					<div class="flex flex-row justify-center gap-3 flex-wrap">
+					<h4 data-loc>You can save your exported 2FA codes, so you can use them elsewhere, and keeping a backup of your codes is always a good idea.</h4>
+					<div class="flex flex-row flex-wrap justify-center gap-3">
 						<div>
-							<button class="buttoni" id="but1" onclick="newSaveFile()">
-								<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-									<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 7v8a2 2 0 002 2h6M8 7V5a2 2 0 012-2h4.586a1 1 0 01.707.293l4.414 4.414a1 1 0 01.293.707V15a2 2 0 01-2 2h-2M8 7H6a2 2 0 00-2 2v10a2 2 0 002 2h8a2 2 0 002-2v-2" />
+							<button class="buttoni" id="but1" onclick="saveFile()">
+								<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+									<path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+									<path d="M14 3v4a1 1 0 0 0 1 1h4"></path>
+									<path d="M11.5 21h-4.5a2 2 0 0 1 -2 -2v-14a2 2 0 0 1 2 -2h7l5 5v5m-5 6h7m-3 -3l3 3l-3 3"></path>
 								</svg>
 								<span data-loc>Export .authme file</span>
 							</button>
@@ -63,29 +65,15 @@
 						</div>
 						<div>
 							<button class="buttoni" id="but2" onclick="saveQrCodes()">
-								<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-									<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 7v8a2 2 0 002 2h6M8 7V5a2 2 0 012-2h4.586a1 1 0 01.707.293l4.414 4.414a1 1 0 01.293.707V15a2 2 0 01-2 2h-2M8 7H6a2 2 0 00-2 2v10a2 2 0 002 2h8a2 2 0 002-2v-2" />
+								<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+									<path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+									<path d="M14 3v4a1 1 0 0 0 1 1h4"></path>
+									<path d="M11.5 21h-4.5a2 2 0 0 1 -2 -2v-14a2 2 0 0 1 2 -2h7l5 5v5m-5 6h7m-3 -3l3 3l-3 3"></path>
 								</svg>
 								<span data-loc>Export .html file</span>
 							</button>
-							<h5 data-loc class="m-3">Ideal for scanning the QR codes or for security backup.</h5>
+							<h5 data-loc class="m-3 mb-8">Ideal for scanning the QR codes or for security backup.</h5>
 						</div>
-					</div>
-
-					<!-- advanced -->
-					<div class="mx-auto p-3">
-						<details class="details mb-5 transform ease-in duration-200">
-							<summary class="summary font-bold mb-3 cursor-pointer">More options</summary>
-							<div>
-								<button class="buttoni" id="but1" onclick="saveFile()">
-									<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-										<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 7v8a2 2 0 002 2h6M8 7V5a2 2 0 012-2h4.586a1 1 0 01.707.293l4.414 4.414a1 1 0 01.293.707V15a2 2 0 01-2 2h-2M8 7H6a2 2 0 00-2 2v10a2 2 0 002 2h8a2 2 0 002-2v-2" />
-									</svg>
-									Export .txt file
-								</button>
-								<h5 class="m-3">The old way to import for Authme or other Authme apps.</h5>
-							</div>
-						</details>
 					</div>
 				</div>
 			</div>
